// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display 'adding' after loading 1`] = `
.emotion-0 {
  position: -webkit-sticky;
  position: sticky;
  bottom: 2.5rem;
  z-index: 150;
  overflow: hidden;
  height: 51px;
}

@media (min-width: 64em) {
  .emotion-0 {
    height: 3.6vw;
  }
}

@media (min-width: 93.75em) {
  .emotion-0 {
    height: 54px;
  }
}

.emotion-0>div {
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),0 4px 6px -2px rgba(0, 0, 0, 0.05);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  border-radius: 0.125rem;
  background-color: var(--secondary);
  line-height: 1em;
  color: var(--accents-1);
  text-align: center;
  cursor: pointer;
  box-shadow: rgb(0 0 0 / 28%) 0.785217px 0.785217px 3.14087px;
  -webkit-transition: background 0.5s cubic-bezier(0.19, 1, 0.22, 1),color 0.5s cubic-bezier(0.19, 1, 0.22, 1);
  transition: background 0.5s cubic-bezier(0.19, 1, 0.22, 1),color 0.5s cubic-bezier(0.19, 1, 0.22, 1);
  position: relative;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0);
  font-size: 16.5px;
  letter-spacing: -0.06em;
  border-radius: 4px;
}

@media (min-width: 64em) {
  .emotion-3 {
    font-size: 13.5px;
  }
}

@media (min-width: 70.3125em) {
  .emotion-3 {
    font-size: 1.2vw;
  }
}

@media (min-width: 93.75em) {
  .emotion-3 {
    font-size: 18px;
  }
}

.emotion-3>div {
  position: absolute;
  left: 0px;
  top: 0px;
  z-index: 20;
  width: 100%;
  height: 100%;
  background-color: #000;
}

.emotion-3>div:first-of-type::after {
  content: "";
  position: absolute;
  right: -20px;
  top: 0px;
  width: 30px;
  height: calc(100% + 20px);
  background: #000;
  -webkit-transform: rotate(-15deg);
  -moz-transform: rotate(-15deg);
  -ms-transform: rotate(-15deg);
  transform: rotate(-15deg);
}

.emotion-3>div:nth-of-type(2) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 10;
}

@media (hover: hover) and (pointer: fine) {
  .emotion-3>div:nth-of-type(2):hover {
    background-color: var(--accents-9);
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="cart-button"
    style="opacity: 1;"
  >
    <button
      class="emotion-2 emotion-3 emotion-4"
      href=""
      role="button"
      type="submit"
    >
      <div
        data-testid="motion-x"
        style="transform: translateX(calc(-100% - 30px)) translateZ(0);"
      />
      <div
        style="background-color: black;"
      >
        <div
          class="flex justify-center items-center absolute left-0 top-0 w-full h-full"
        >
          <h1
            style="line-height: normal; margin-top: 3px; font-weight: 500;"
          >
            <span
              class="animated-text-wrapper"
            >
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  A
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  d
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  d
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                   
                </span>
              </span>
            </span>
            <span
              class="animated-text-wrapper"
            >
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  t
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  o
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                   
                </span>
              </span>
            </span>
            <span
              class="animated-text-wrapper"
            >
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  C
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  a
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  r
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  t
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                   
                </span>
              </span>
            </span>
          </h1>
        </div>
        <div
          class="flex justify-center items-center absolute left-0 top-0 w-full h-full"
        >
          <h1
            style="line-height: normal; margin-top: 3px; font-weight: 500;"
          >
            <span
              class="animated-text-wrapper"
            >
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  A
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  d
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  d
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  i
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  n
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  g
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                   
                </span>
              </span>
            </span>
          </h1>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`should display add to cart before loading 1`] = `
.emotion-0 {
  position: -webkit-sticky;
  position: sticky;
  bottom: 2.5rem;
  z-index: 150;
  overflow: hidden;
  height: 51px;
}

@media (min-width: 64em) {
  .emotion-0 {
    height: 3.6vw;
  }
}

@media (min-width: 93.75em) {
  .emotion-0 {
    height: 54px;
  }
}

.emotion-0>div {
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),0 4px 6px -2px rgba(0, 0, 0, 0.05);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  border-radius: 0.125rem;
  background-color: var(--secondary);
  line-height: 1em;
  color: var(--accents-1);
  text-align: center;
  cursor: pointer;
  box-shadow: rgb(0 0 0 / 28%) 0.785217px 0.785217px 3.14087px;
  -webkit-transition: background 0.5s cubic-bezier(0.19, 1, 0.22, 1),color 0.5s cubic-bezier(0.19, 1, 0.22, 1);
  transition: background 0.5s cubic-bezier(0.19, 1, 0.22, 1),color 0.5s cubic-bezier(0.19, 1, 0.22, 1);
  position: relative;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0);
  font-size: 16.5px;
  letter-spacing: -0.06em;
  border-radius: 4px;
}

@media (min-width: 64em) {
  .emotion-3 {
    font-size: 13.5px;
  }
}

@media (min-width: 70.3125em) {
  .emotion-3 {
    font-size: 1.2vw;
  }
}

@media (min-width: 93.75em) {
  .emotion-3 {
    font-size: 18px;
  }
}

.emotion-3>div {
  position: absolute;
  left: 0px;
  top: 0px;
  z-index: 20;
  width: 100%;
  height: 100%;
  background-color: #000;
}

.emotion-3>div:first-of-type::after {
  content: "";
  position: absolute;
  right: -20px;
  top: 0px;
  width: 30px;
  height: calc(100% + 20px);
  background: #000;
  -webkit-transform: rotate(-15deg);
  -moz-transform: rotate(-15deg);
  -ms-transform: rotate(-15deg);
  transform: rotate(-15deg);
}

.emotion-3>div:nth-of-type(2) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 10;
}

@media (hover: hover) and (pointer: fine) {
  .emotion-3>div:nth-of-type(2):hover {
    background-color: var(--accents-9);
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="cart-button"
    style="opacity: 0;"
  >
    <button
      class="emotion-2 emotion-3 emotion-4"
      href=""
      role="button"
      type="submit"
    >
      <div
        data-testid="motion-x"
        style="transform: translateX(calc(-100% - 30px)) translateZ(0);"
      />
      <div>
        <div
          class="flex justify-center items-center absolute left-0 top-0 w-full h-full"
        >
          <h1
            style="line-height: normal; margin-top: 3px; font-weight: 500;"
          >
            <span
              class="animated-text-wrapper"
            >
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  A
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  d
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  d
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                   
                </span>
              </span>
            </span>
            <span
              class="animated-text-wrapper"
            >
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  t
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  o
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                   
                </span>
              </span>
            </span>
            <span
              class="animated-text-wrapper"
            >
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  C
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  a
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  r
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                  t
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: none;"
                >
                   
                </span>
              </span>
            </span>
          </h1>
        </div>
        <div
          class="flex justify-center items-center absolute left-0 top-0 w-full h-full"
        >
          <h1
            style="line-height: normal; margin-top: 3px; font-weight: 500;"
          >
            <span
              class="animated-text-wrapper"
            >
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  A
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  d
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  d
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  i
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  n
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                  g
                </span>
              </span>
              <span
                class="inline-block overflow-hidden"
              >
                <span
                  class="inline-block"
                  style="transform: translateY(200%) translateZ(0);"
                >
                   
                </span>
              </span>
            </span>
          </h1>
        </div>
      </div>
    </button>
  </div>
</div>
`;
